# ai-report

./: .env.example  .gitignore  CONTRIBUTING.md  README.md  README.zh-CN.md  docker-compose.yml
.github/: PULL_REQUEST_TEMPLATE.md
client/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  (+1 more)
server/: .dockerignore  .env.example  Cargo.toml  Dockerfile  docker-entrypoint.sh
server/migrations/: 001_init.sql  002_groups_and_metrics.sql  003_report_canvas.sql  004_report_html.sql  005_refresh_interval.sql  006_knowledge_base.sql  007_generation_status.sql  008_published_html.sql  009_users.sql  010_ai_logs.sql  011_ai_examples.sql  012_ai_logs_params.sql  013_report_style.sql  014_report_score_and_achievements.sql  015_report_versions.sql  016_metric_snapshots.sql  017_column_profiling.sql  018_table_descriptions.sql  019_column_descriptions.sql  020_conversation_generation_status.sql  021_email_alerts.sql  022_feishu_alerts.sql  023_report_themes.sql  024_report_summaries.sql
server/src/: ai_log.rs  alert_engine.rs  alert_scheduler.rs  column_profiler.rs  db_pool.rs  email.rs  excel.rs  feishu.rs  main.rs  models.rs  snapshot_scheduler.rs
server/src/llm/: client.rs  mod.rs  prompts.rs
server/src/routes/: achievements.rs  ai_examples.rs  ai_logs.rs  alerts.rs  auth.rs  chat.rs  conversations.rs  datasources.rs  knowledge_base.rs  knowledge_graph.rs  llm_config.rs  metric_groups.rs  metric_pools.rs  mod.rs  query.rs  report_datasources.rs  report_groups.rs  report_themes.rs  reports.rs  snapshots.rs  table_descriptions.rs
(+48 files in other folders)
