[package]
name = "ai-report-server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio", "mysql", "postgres", "chrono", "uuid"] }
oracle = "0.6"
tower-http = { version = "0.6", features = ["cors", "limit", "trace"] }
tower = "0.5"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
futures = "0.3"
tokio-stream = "0.1"
tracing = "0.1"
tracing-subscriber = "0.3"
dotenvy = "0.15"
bcrypt = "0.16"
jsonwebtoken = "9"
regex = "1"
lettre = { version = "0.11", default-features = false, features = ["tokio1", "tokio1-rustls-tls", "smtp-transport", "builder", "hostname"] }
rust_xlsxwriter = "0.79"
# HMAC-SHA256 signing for the Feishu (Lark) custom-bot webhook.
hmac = "0.12"
sha2 = "0.10"
base64 = "0.22"
